@@ -66,6 +66,11 @@ neqn: $(top_srcdir)/src/preproc/eqn/neqn.sh $(SH_DEPS_SED_SCRIPT)
 	&& chmod +x $@.tmp \
 	&& mv $@.tmp $@
 
+eqn_TESTS = \
+  src/preproc/eqn/tests/diagnostics-report-correct-line-numbers.sh
+TESTS += $(eqn_TESTS)
+EXTRA_DIST += $(eqn_TESTS)
+
 
 # Local Variables:
 # fill-column: 72
